adicionada a logica de ativacao

--- a/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.html
+++ b/src/app/shared/components/yes-no-button-group/yes-no-button-group.component.html
@@ -1,6 +1,21 @@
-<div>
-  <label>{{ label }}</label>
+<div class="button-group">
+  <label class="label">{{ label }}</label>
 
-  <button type="button">Yes</button>
-  <button type="button">No</button>
+  <button
+    type="button"
+    class="button button-yes"
+    [class.button-pressed]="value === options.YES"
+    (click)="activate(options.YES)"
+  >
+    Yes
+  </button>
+
+  <button
+    type="button"
+    class="button button-no"
+    [class.button-pressed]="value === options.NO"
+    (click)="activate(options.NO)"
+  >
+    No
+  </button>
 </div>
